[package]
name = "cpt"
version = "0.4.1"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/AlexAegis/cpt"
readme="readme.md"
description = """
A filesystem tool that will copy a folder structure
and if there is provided templating data
when it encounders any `.tpl` files, it tries to
fill it using Handlebar syntax and prints out
the transformed version."""

[dependencies]
clap = "2.33.0"
walkdir = "2.2.9"
serde = "1.0.103"
serde_json = "1.0.42"
handlebars = "3.0.0-beta.1"

[dev-dependencies]
clippy = "0.0.302"
assert_cmd = "0.11.1"

[lib]
name = "cpt"
doc = true

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3
