[package]
name = "cpt"
version = "0.5.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/AlexAegis/cpt"
readme="readme.md"
description = """
A filesystem tool that will copy a folder structure
and if there is provided templating data
when it encounders any `.tpl` files, it tries to
fill it using Handlebar syntax and prints out
the transformed version."""

[dependencies]
clap = "4.0.29"
walkdir = "2.3.2"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
handlebars = "5.0.0-beta.1"

[dev-dependencies]
assert_cmd = "2.0.7"

[lib]
name = "cpt"
doc = true

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3
